--- a/CTDL2022.tex
+++ b/CTDL2022.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt, oneside]{book}
+\documentclass[10pt, oneside]{book}
 \usepackage[width=4.375in, height=7.0in, top=1.0in, papersize={5.5in,8.5in}]{geometry}
 \usepackage{graphicx}
 \usepackage{amsmath}
@@ -43,11 +43,11 @@
 % ---------------------------- grammar enviromnent --------------------------- %
 \newenvironment{grammar}{
     \begin{small}
-    \begin{center}
+    % \begin{center}
     \begin{longtable}{rcl}
 }{
     \end{longtable}
-    \end{center}
+    % \end{center}
     \end{small}
 }
 % ----------------------------- grammar statement ---------------------------- %
@@ -94,6 +94,9 @@
 
 % ------------------------------ Language Model ------------------------------ %
 \input{chapters/languageModel.tex}
+
+% --------------------------- Sense Turing Machine --------------------------- %
+\input{chapters/senseTuringMachine.tex}
 
 \chapter{CTDL Virtual Machine}
 
