finish Introduction.tex

--- a/CTDL2022.tex
+++ b/CTDL2022.tex
@@ -87,10 +87,9 @@
 \tableofcontents
 %
 \mainmatter
-%
-\chapter{Introduction}
-% your text here
-%
+
+% ------------------------------- Introduction ------------------------------- %
+\input{chapters/Introduction.tex}
 
 % ------------------------------ Language Model ------------------------------ %
 \input{chapters/languageModel.tex}
