--- a/CTDL2022.tex
+++ b/CTDL2022.tex
@@ -50,8 +50,8 @@
     frame=single,
     basicstyle=\ttfamily\footnotesize,
     frameround=tttt,
-    xleftmargin=0.15\linewidth,
-    xrightmargin=0.05\linewidth,
+    % xleftmargin=0.15\linewidth,
+    % xrightmargin=0.05\linewidth,
 }
 
 % ---------------------------------------------------------------------------- %
