--- a/CTDL2022.tex
+++ b/CTDL2022.tex
@@ -111,6 +111,8 @@
 \newcommand{\assocRight}{\texttt{<assoc=right>}}
 \newcommand{\assocRightsp}{\assocRight\gsp}
 
+\newcommand{\lext}[1]{\texttt{#1}}
+
 \newcommand{\leftBrace}{\{}
 \newcommand{\rightBrace}{\}}
 \newcommand{\OR}{\mspace{-9mu} | \mspace{2mu}}
