fix expression grammar

--- a/CTDL2022.tex
+++ b/CTDL2022.tex
@@ -106,7 +106,7 @@
 \newcommand{\bop}[1]{\texttt{bop=}#1}
 \newcommand{\bopsp}[1]{\bop{#1}\gsp}
 \newcommand{\prefix}[1]{\texttt{prefix=}#1}
-\newcommand{\prefixsp}[1]{\prefix{#1}}
+\newcommand{\prefixsp}[1]{\prefix{#1}\gsp}
 \newcommand{\postfix}[1]{\texttt{postfix=}#1}
 \newcommand{\assocRight}{\texttt{<assoc=right>}}
 \newcommand{\assocRightsp}{\assocRight\gsp}
