--- a/CTDL2022.tex
+++ b/CTDL2022.tex
@@ -1,6 +1,8 @@
 \documentclass[10pt, oneside]{book}
 \usepackage[width=4.375in, height=7.0in, top=1.0in, papersize={5.5in,8.5in}]{geometry}
 \usepackage{graphicx}
+\usepackage{amsfonts}
+\usepackage{amsthm}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsfonts}
@@ -15,6 +17,7 @@
 \usepackage{listings}
 \usepackage{lscape}
 \usepackage{xcolor, colortbl}
+% \usepackage{mathrsfs}
 
 
 % \usepackage{hyperref}
