--- a/CTDL2022.tex
+++ b/CTDL2022.tex
@@ -29,7 +29,8 @@
 \fancyhf{}
 \fancyhead[L,RO]{\bfseries\thepage}
 \fancyhead[LO]{\bfseries\rightmark}
-\fancyhead[R]{\bfseries\leftmark}
+\fancyhead[R]{\bfseries\leftmark \quad \thepage}
+% \fancyfoot[R]{\bfseries\thepage}
 \renewcommand{\headrulewidth}{0.5pt}
 \renewcommand{\footrulewidth}{0pt}
 \addtolength{\headheight}{14pt}
@@ -37,6 +38,7 @@
 \renewcommand{\footruleskip}{0pt}
 \fancypagestyle{plain}{%
 \fancyhead{}
+% \fancyfoot{}
 \renewcommand{\headrulewidth}{0pt}
 }
 
@@ -146,12 +148,13 @@
 \input{chapters/languageModel.tex}
 
 % --------------------------- Sense Turing Machine --------------------------- %
-\input{chapters/senseTuringMachine.tex}
+\input{chapters/sensoryTuringMachine.tex}
 
-\chapter{CTDL Virtual Machine}
+\chapter{CTL Virtual Machine}
 
 \appendix
 \input{chapters/grammar.tex}
+\input{chapters/exampleApp.tex}
 \backmatter
 
 \end{document}
