change file name

--- a/CTLReport.tex
+++ b/CTLReport.tex
@@ -132,7 +132,7 @@
 \begin{document}
 \frontmatter
 %
-\chapter*{\Huge \center Crowd Task Language \\ 2022 Report}
+\chapter*{\Huge \center Crowd Task Language \\Report}
 \thispagestyle{empty}
 %{\hspace{0.25in} \includegraphics{./ru_sun.jpg} }
 \section*{\huge \center Yixuan Luo}
